# pkg/api/oas_response_encoders_gen.go
@@ -56,19 +56,6 @@ func encodeTestResponse(response TestRes, w http.ResponseWriter, span trace.Span
 
 		return nil
 
-	case *CreatedResponseSchema:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(201)
-		span.SetStatus(codes.Ok, http.StatusText(201))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
 	case *TestBadRequest:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(400)
